# SoftOverlord100

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  Vagrantfile  docker-compose.yaml  provision.sh  start.sh  startup.bash
.devcontainer/: Dockerfile  x86
.devcontainer/amd64/: devcontainer.json  docker-compose-amd64.yml
.devcontainer/arm64/: devcontainer.json
.devcontainer/x86/: devcontainer.json
.github/scripts/: start.sh
.github/workflows/: black-lint-check.yml  cpp_linting.yml  ros2-build-check.yml
.gitlab/workflows/: black-lint-check.yml
Overlord100-interfaces/: CMakeLists.txt  package.xml
Overlord100-interfaces/srv/: ChangeMode.srv
Overlord100-switcher/: CMakeLists.txt  package.xml
Overlord100-switcher/src/: auto_vel_publisher.cpp  change_mode_client.cpp  manual_vel_publisher.cpp  mode_switcher.cpp
database/launch/: route_server.launch
database/msg/: BaseMap.msg  BasePoint.msg  BaseWall.msg
database/param/: route_server_params.yaml
database/src/database_map_server/: main.py
database/src/database_map_server/db_workers/: dbworker.py  mongodbworker.py
database/src/database_map_server/maps/: basemap.py
database/src/database_map_server/points/: basepoint.py
database/src/database_map_server/walls/: basewalls.py
database/srv/: GetMapRequest.srv  RemoveMapRequest.srv  UpdateMapRequest.srv
database_node/: README.txt
database_node/turtle_subscriber/: package.xml  setup.cfg  setup.py
database_node/turtle_subscriber/turtle_subscriber/: dummy_map_publisher.py  turtle_publisher_node.py  turtle_request_publisher_node.py  turtle_subscriber_node.py
displaying_map/: Readme.txt  index1.html  index2.html  last_version.html  last_version_without_styling.html
displaying_map_react/: package-lock.json  package.json
displaying_map_react/src/: App.css  App.js
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/overlord100_controller/share/overlord100_controller/: package.bash  package.zsh
log/: latest_build
map_visualiser/: addMapFilter.py  mapVisualiser.py
overlord100_bringup/: CMakeLists.txt  package.xml
overlord100_bringup/config/: lidar_back.yaml  lidar_front.yaml
overlord100_bringup/launch/: lidars.launch.py  manual_control.launch.py
overlord100_hardware/battery/: CMakeLists.txt  package.xml
overlord100_hardware/battery/src/: battery_monitor.cpp
overlord100_hardware/motors/can_msgs/: CMakeLists.txt  package.xml
overlord100_hardware/motors/can_msgs/msg/: Frame.msg
overlord100_hardware/motors/zlac8015d/: CMakeLists.txt  package.xml
overlord100_hardware/motors/zlac8015d/src/: motors_driver_node.cpp
overlord100_logger/: CMakeLists.txt  package.xml
overlord100_logger/src/: log_collector.cpp
overlord100_map_saver/: CMakeLists.txt  package.xml
overlord100_map_saver/src/: map_saver.cpp
overlord100_msgs/: CMakeLists.txt  package.xml
overlord100_msgs/msg/: LogMessage.msg  Mode.msg  SaveMap.msg  SaveMapFrontSide.msg
software_overlord100/: CMakeLists.txt  package.xml
software_overlord100/launch/: pub_sub_launch.py
software_overlord100/src/: sample_publisher.cpp  sample_subscriber.cpp
test_software_overlord100/: CMakeLists.txt  package.xml
test_software_overlord100/src/: sample_subscriber.cpp
the_structured_code/: index.html  main.js  package-lock.json  package.json  style.css
urdf_dummy/: package.xml  setup.cfg  setup.py
urdf_dummy/description/: dummy_bot.sdf  dummy_bot.urdf  overlord100.urdf  overlord100_with_diffdrive.urdf
urdf_dummy/launch/: add.urdf.launch.py  config.yaml  demo_mpv1.launch.py  gazebo.launch.py  put_urdf.launch.py  robot_state_publisher.launch.py  setup_bridges.launch.py  sim.launch.py  sim_custom_controller.launch.py  sim_default_controller.launch.py  sim_no_controller.launch.py  spawn_model_with_diffdrive.launch.py  spawn_model_with_diffdrive_headless.launch.py  spawn_models.launch.py  static_transforms.launch.py  test.launch.py  test.py
urdf_dummy/models/: back_left_wheel.dae  back_lidar.dae  back_right_wheel.dae  dummy_world.sdf  front_left_wheel.dae  front_lidar.dae  front_right_wheel.dae  inno_3rd_floor.dae  left_wheel.dae  model.config  mvp_world.sdf  realsense.dae  right_wheel.dae  simple_office.dae  sonar1.dae  sonar2.dae  sonar3.dae  sonar4.dae  sonar5.dae  sonar6.dae  sonar7.dae  sonar8.dae
urdf_dummy/rviz/: simulator.rviz
urdf_dummy/test/: test_converter_is_available.py
urdf_dummy/urdf_dummy/: controller.py  converter.py
urdf_dummy/worlds/: dummy_world.sdf  giga_mini_map.dae  mvp_world.sdf
urdf_dummy/worlds/models/: model.sdf  mvp_world.sdf
