<!-- <?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>overlord100_map_saver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mozhegova04@gmail.com">mobile</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>overlord100_msgs</depend>
  <depend>nav2_map_server</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> -->



<?xml version="1.0"?>
<package format="2">
  <name>overlord100_map_saver</name>
  <version>0.0.0</version>
  <description>Custom Map Saver Package</description>

  <maintainer email="your_email@domain.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav2_map_server</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
