<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>software_overlord100</name>
  <version>0.0.0</version>
  <description>TODO: This package incorporates all the software nodes, that are running on the backend side of the robot. This includes SLAM, path planner, robot contorller, sensors data processing, behaviour tree, and </description>
  <maintainer email="domrachev03@mail.ru">mobile</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
